# Project-work-on-the-course-OTUS-CPP-Basic

./: CMakeLists.txt  README.md  TODO  download_weather_curl.h  main_taf.cpp
dictionary/: AMOFSG_Dictionary.txt  NameAirport.txt  STRUCT_TAF.txt  Struct_Taf_Forecast.txt
include/: ForecastNode.h  Function.h  Icing.h  Main_Inform_METAR.h  Main_Inform_TAF.h  Sky_Cover.h  Station_Sensors.h  Surface_Temperature.h  Turbulence.h  Visibility.h  Wind.h  Wind_Shear.h  Wx.h  colored_cout.h  download_weather_curl.h
source/: ForecastNode.cpp  Function.cpp  Icing.cpp  Main_Inform_METAR.cpp  Main_Inform_TAF.cpp  Sky_Cover.cpp  Station_Sensors.cpp  Surface_Temperature.cpp  Turbulence.cpp  Visibility.cpp  Wind.cpp  Wind_Shear.cpp  Wx.cpp  colored_cout.cpp
